# exfetch

./: .mcp.json  Cargo.toml  README.md  exfetch-prd-v2.md  exfetch-prd.md
.github/: dependabot.yml
docs/superpowers/plans/: 2026-04-02-exfetch-implementation.md
docs/superpowers/specs/: 2026-04-02-exfetch-browser-agent-design.md
extension/chrome/: background.js  manifest.json  popup.html  popup.js
extension/safari/: README.md
src/: config.rs  lib.rs  main.rs
src/bridge/: connection.rs  mod.rs  protocol.rs  ws_server.rs
src/cli/: commands.rs
src/engine/: command.rs  mod.rs  policy.rs  router.rs
src/extract/: markdown.rs  metadata.rs  mod.rs  readability.rs
src/fetch/: http.rs  mod.rs  pdf.rs
src/mcp/: server.rs  tools.rs  types.rs
src/output/: json.rs  markdown.rs  mod.rs  text.rs
src/search/: engine.rs  mod.rs  result.rs
tests/: bridge_tests.rs  engine_tests.rs  extract_tests.rs  fetch_tests.rs  mcp_tests.rs  search_tests.rs
tests/fixtures/: article_with_formatting.html  ddg_results.html  wikipedia_sample.html
