[package]
name = "exfetch"
version = "0.1.0"
edition = "2021"
description = "Browser-aware web execution layer for LLM agents"
license = "MIT"
repository = "https://github.com/BMC-INC/exfetch"

[lib]
name = "exfetch"
path = "src/lib.rs"

[[bin]]
name = "exfetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "gzip", "brotli", "deflate"] }
url = "2"
thiserror = "1"
scraper = "0.20"
html2text = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
urlencoding = "2"
toml = "0.8"
dirs = "5"
futures-util = "0.3"
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]

[features]
default = []
